// Vitest Snapshot v1

exports[`Complex Block/HTML/Markdown Conversions > Convert complex blocks to HTML 1`] = `"<h1>Heading 1</h1><h2>Heading 2</h2><h3>Heading 3</h3><p><span data-text-color=\\"purple\\"><span data-background-color=\\"green\\">Paragraph</span></span></p><p>P<strong>ara</strong><em>grap</em>h</p><p>P<u>ara</u><s>grap</s>h</p><ul><li><p>Bullet List Item</p></li><li><p>Bullet List Item</p><ul><li><p>Bullet List Item</p><ul><li><p>Bullet List Item</p></li></ul><p>Paragraph</p><ol><li><p>Numbered List Item</p></li><li><p>Numbered List Item</p></li><li><p>Numbered List Item</p><ol><li><p>Numbered List Item</p></li></ol></li></ol><ul><li><p>Bullet List Item</p></li></ul></li><li><p>Bullet List Item</p></li></ul></li><li><p>Bullet List Item</p></li></ul>"`;

exports[`Complex Block/HTML/Markdown Conversions > Convert complex blocks to Markdown 1`] = `
"# Heading 1

## Heading 2

### Heading 3

Paragraph

P**ara***grap*h

Para~~grap~~h

*   Bullet List Item

*   Bullet List Item

    *   Bullet List Item

        *   Bullet List Item

        Paragraph

        1.  Numbered List Item

        2.  Numbered List Item

        3.  Numbered List Item

            1.  Numbered List Item

        *   Bullet List Item

    *   Bullet List Item

*   Bullet List Item
"
`;

exports[`Nested Block/HTML/Markdown Conversions > Convert nested blocks to HTML 1`] = `"<h1>Heading</h1><p>Paragraph</p><ul><li><p>Bullet List Item</p><ol><li><p>Numbered List Item</p></li></ol></li></ul>"`;

exports[`Nested Block/HTML/Markdown Conversions > Convert nested blocks to Markdown 1`] = `
"# Heading

Paragraph

*   Bullet List Item

    1.  Numbered List Item
"
`;

exports[`Non-Nested Block/HTML/Markdown Conversions > Convert non-nested HTML to blocks 1`] = `
[
  {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Heading",
        "type": "text",
      },
    ],
    "id": "27",
    "props": {
      "backgroundColor": "default",
      "level": "1",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "heading",
  },
  {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Paragraph",
        "type": "text",
      },
    ],
    "id": "28",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
  {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Bullet List Item",
        "type": "text",
      },
    ],
    "id": "29",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "bulletListItem",
  },
  {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Numbered List Item",
        "type": "text",
      },
    ],
    "id": "30",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "numberedListItem",
  },
]
`;

exports[`Non-Nested Block/HTML/Markdown Conversions > Convert non-nested Markdown to blocks 1`] = `
[
  {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Heading",
        "type": "text",
      },
    ],
    "id": "27",
    "props": {
      "backgroundColor": "default",
      "level": "1",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "heading",
  },
  {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Paragraph",
        "type": "text",
      },
    ],
    "id": "28",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
  {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Bullet List Item",
        "type": "text",
      },
    ],
    "id": "29",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "bulletListItem",
  },
  {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Numbered List Item",
        "type": "text",
      },
    ],
    "id": "30",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "numberedListItem",
  },
]
`;

exports[`Non-Nested Block/HTML/Markdown Conversions > Convert non-nested blocks to HTML 1`] = `"<h1>Heading</h1><p>Paragraph</p><ul><li><p>Bullet List Item</p></li></ul><ol><li><p>Numbered List Item</p></li></ol>"`;

exports[`Non-Nested Block/HTML/Markdown Conversions > Convert non-nested blocks to Markdown 1`] = `
"# Heading

Paragraph

*   Bullet List Item

1.  Numbered List Item
"
`;

exports[`Styled Block/HTML/Markdown Conversions > Convert styled HTML to blocks 1`] = `
[
  {
    "children": [],
    "content": [
      {
        "styles": {
          "bold": true,
        },
        "text": "Bold",
        "type": "text",
      },
      {
        "styles": {
          "italic": true,
        },
        "text": "Italic",
        "type": "text",
      },
      {
        "styles": {
          "underline": true,
        },
        "text": "Underline",
        "type": "text",
      },
      {
        "styles": {
          "strike": true,
        },
        "text": "Strikethrough",
        "type": "text",
      },
      {
        "styles": {
          "textColor": "red",
        },
        "text": "TextColor",
        "type": "text",
      },
      {
        "styles": {
          "backgroundColor": "red",
        },
        "text": "BackgroundColor",
        "type": "text",
      },
      {
        "styles": {
          "bold": true,
          "italic": true,
        },
        "text": "Multiple",
        "type": "text",
      },
    ],
    "id": "27",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
]
`;

exports[`Styled Block/HTML/Markdown Conversions > Convert styled Markdown to blocks 1`] = `
[
  {
    "children": [],
    "content": [
      {
        "styles": {
          "bold": true,
        },
        "text": "Bold",
        "type": "text",
      },
      {
        "styles": {
          "italic": true,
        },
        "text": "Italic",
        "type": "text",
      },
      {
        "styles": {},
        "text": "Underline",
        "type": "text",
      },
      {
        "styles": {
          "strike": true,
        },
        "text": "Strikethrough",
        "type": "text",
      },
      {
        "styles": {},
        "text": "TextColorBackgroundColor",
        "type": "text",
      },
      {
        "styles": {
          "bold": true,
          "italic": true,
        },
        "text": "Multiple",
        "type": "text",
      },
    ],
    "id": "27",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
]
`;

exports[`Styled Block/HTML/Markdown Conversions > Convert styled blocks to HTML 1`] = `"<p><strong>Bold</strong><em>Italic</em><u>Underline</u><s>Strikethrough</s><span data-text-color=\\"red\\">TextColor</span><span data-background-color=\\"red\\">BackgroundColor</span><strong><em>Multiple</em></strong></p>"`;

exports[`Styled Block/HTML/Markdown Conversions > Convert styled blocks to Markdown 1`] = `
"**Bold***Italic*Underline~~Strikethrough~~TextColorBackgroundColor***Multiple***
"
`;
